styling updates to fix content header spacing on desktop

--- a/src/components/InventoryItem/InventoryItem.scss
+++ b/src/components/InventoryItem/InventoryItem.scss
@@ -143,6 +143,7 @@
 
     &__icon {
         width: 1.2rem;
+        cursor: pointer;
 
         @include tablet {
             width: 1.4rem;
